--- a/Weigh-up.irpt.html
+++ b/Weigh-up.irpt.html
@@ -76,6 +76,60 @@
             color: #007dc0;
         }
 
+        #tCALIBRATION {
+            /*text-align: left;*/
+            font-family: "Arial Black", Arial, Helvetica, sans-serif;
+            font-size: 30px;
+            height: 30px;
+            margin: 0px auto;
+            padding-top: 15px;
+
+            /*color: #cfcfcf;*/
+        }
+
+        #tOrderID, #tWeightOfBox, #tWeightOfSample, #tSampleSize {
+            /*text-align: left;*/
+            font-family: "Arial Black", Arial, Helvetica, sans-serif;
+            font-size: 14px;
+            height: 20px;
+            /*margin: 0px auto;*/
+            /*padding-top: 7px;*/
+
+            /*color: #cfcfcf;*/
+        }
+
+        #tOrderName, #mWeightOfBox, #mWeightOfSample, #mSampleSize1, #mSampleSize2 {
+            /*text-align: left;*/
+            font-family: "Arial Black", Arial, Helvetica, sans-serif;
+            font-size: 25px;
+            height: 60px;
+            /*margin: 0px auto;*/
+            /*padding-top: 10px;*/
+
+            /*color: #cfcfcf;*/
+        }
+
+        #tStatus, #tButton, #tButton2, #tButton3 {
+            font-family: "Arial Black", Arial, Helvetica, sans-serif;
+            font-size: 18px;
+            height: 25px;
+            /*margin: 0px auto;*/
+            /*padding-top: 10px;*/
+
+            /*color: #cfcfcf;*/
+        }
+
+        #tDropdownBox {
+            font-family: "Arial Black", Arial, Helvetica, sans-serif;
+            font-size: 18px;
+            height: 60px;
+            font-weight: bold;
+            /*margin: 0px auto;*/
+            /*padding-top: 10px;*/
+
+            /*color: #cfcfcf;*/
+        }
+
         #TV-MachineID {
             text-align: left;
             font-family: "Arial Black", Arial, Helvetica, sans-serif;
@@ -279,7 +333,6 @@
             letter-spacing: 0.2em;
         }
 
-
         #TF-MoldName, #TF-MoldOriginalCavities, #TF-MoldTotalCavities, #TF-MoldBlockedList, #TF-Status {
             font-size: 30px;
             height: 55px;
@@ -400,17 +453,17 @@
 
         /* login */
 
-        #__cell74, #__cell75, #__cell76, #__cell78 {
-            text-align: center;
-            height: 36px;
-        }
+        /*#__cell74, #__cell75, #__cell76, #__cell78 {*/
+        /*text-align: center;*/
+        /*height: 36px;*/
+        /*}*/
 
-        /* order list */
+        /*!*!* order list *!*!*/
 
-        #__cell79 {
-            text-align: center;
-            height: 36px;
-        }
+        /*#__cell79 {*/
+        /*text-align: center;*/
+        /*height: 36px;*/
+        /*}*/
 
         /* cavities */
 
@@ -426,34 +479,34 @@
 
         /* mold history */
 
-        #__cell100, #__cell101, #__cell102, #__cell103, #__cell104, #__cell105,
-        #__cell106, #__cell107, #__cell108, #__cell109, #__cell110, #__cell111,
-        #__cell112, #__cell113, #__cell114, #__cell115, #__cell116, #__cell117,
-        #__cell118, #__cell119, #__cell120, #__cell121, #__cell122, #__cell123,
-        #__cell124, #__cell125, #__cell126, #__cell127, #__cell128, #__cell129,
-        #__cell130, #__cell131, #__cell132, #__cell133, #__cell134, #__cell135,
-        #__cell136, #__cell137, #__cell138, #__cell139, #__cell140, #__cell141,
-        #__cell142, #__cell143, #__cell144, #__cell145, #__cell146, #__cell147,
-        #__cell148, #__cell149, #__cell150, #__cell151, #__cell152, #__cell153,
-        #__cell154, #__cell155, #__cell156, #__cell157, #__cell158, #__cell159,
-        #__cell160, #__cell161, #__cell162, #__cell163, #__cell164, #__cell165,
-        #__cell166, #__cell167, #__cell168, #__cell169, #__cell170, #__cell171 {
-            text-align: center;
-        }
+        /*#__cell100, #__cell101, #__cell102, #__cell103, #__cell104, #__cell105,*/
+        /*#__cell106, #__cell107, #__cell108, #__cell109, #__cell110, #__cell111,*/
+        /*#__cell112, #__cell113, #__cell114, #__cell115, #__cell116, #__cell117,*/
+        /*#__cell118, #__cell119, #__cell120, #__cell121, #__cell122, #__cell123,*/
+        /*#__cell124, #__cell125, #__cell126, #__cell127, #__cell128, #__cell129,*/
+        /*#__cell130, #__cell131, #__cell132, #__cell133, #__cell134, #__cell135,*/
+        /*#__cell136, #__cell137, #__cell138, #__cell139, #__cell140, #__cell141,*/
+        /*#__cell142, #__cell143, #__cell144, #__cell145, #__cell146, #__cell147,*/
+        /*#__cell148, #__cell149, #__cell150, #__cell151, #__cell152, #__cell153,*/
+        /*#__cell154, #__cell155, #__cell156, #__cell157, #__cell158, #__cell159,*/
+        /*#__cell160, #__cell161, #__cell162, #__cell163, #__cell164, #__cell165,*/
+        /*#__cell166, #__cell167, #__cell168, #__cell169, #__cell170, #__cell171 {*/
+        /*text-align: center;*/
+        /*}*/
 
-        #Cell-TitleMH, #Cell-TitleMH2 {
-            text-align: center;
-        }
+        /*#Cell-TitleMH, #Cell-TitleMH2 {*/
+        /*text-align: center;*/
+        /*}*/
 
-        /* titles for now */
-        #__cell172, #__cell179, #__cell182, #__cell216 {
-            text-align: center;
-        }
+        /*!* titles for now *!*/
+        /*#__cell172, #__cell179, #__cell182, #__cell216 {*/
+        /*text-align: center;*/
+        /*}*/
 
-        /* downtime */
-        #__cell174, #__cell177 {
-            text-align: center;
-        }
+        /*!* downtime *!*/
+        /*#__cell174, #__cell177 {*/
+        /*text-align: center;*/
+        /*}*/
 
         /* scrap */
 
@@ -468,7 +521,7 @@
         .sapUiTf {
             text-align: center !important;
             font-weight: bold !important;
-            font-size: 18px !important;
+            font-size: 25px !important;
         }
 
         li.sapUiLbxI {
@@ -1910,6 +1963,285 @@
             widths: ['750px']
         });
 
+        var oLayout = new sap.ui.commons.layout.MatrixLayout({
+            id: 'oLayout',
+            layoutFixed: false,
+            columns: 7,
+            width: '700px',
+            widths: ['100px', '100px', '100px', '100px', '100px', '100px', '100px']
+        });
+
+        var oRow = new sap.ui.commons.layout.MatrixLayoutRow({
+            height: '40px'
+        });
+
+        oLayout.addRow(oRow);
+
+
+        oRow = new sap.ui.commons.layout.MatrixLayoutRow({
+            // id : 'oRow0',
+            height: '80px',
+            cells: [
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    // id : 'Cell-0-0',
+                    // backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill1,
+                    height: '60px',
+                    colSpan: 2
+                }),
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    // id: 'Cell-0-2',
+                    // backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill2,
+                    colSpan: 3
+                }).addContent(new sap.ui.commons.Label({
+                    id: 'tCALIBRATION',
+                    text: 'CALIBRATION',
+                    width: "100%",
+                    // design: sap.ui.commons.TextViewDesign.H1,
+                    textAlign: sap.ui.core.TextAlign.Center,
+                })),
+            ]
+        });
+        oLayout.addRow(oRow);
+
+        oRow = new sap.ui.commons.layout.MatrixLayoutRow({
+            // id : 'oRow0',
+            height: '80px',
+            cells: [
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    // id : 'Cell-0-0',
+                    // backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill1,
+                    height: '60px',
+                    colSpan: 2
+                }).addContent(new sap.ui.commons.Label({
+                    id: 'tOrderID',
+                    text: 'Order ID',
+                    width: "90%",
+                    // design: sap.ui.commons.TextViewDesign.H1,
+                    textAlign: sap.ui.core.TextAlign.Right,
+                })),
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    // id: 'Cell-0-2',
+                    // backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill2,
+                    colSpan: 3,
+                    height: '60px',
+                }).addContent(new sap.ui.commons.TextField({
+                    id: 'tOrderName',
+                    tooltip: 'ORDER ID',
+                    editable: false,
+                    value: '000001009807',
+                    width: '100%',
+                    textAlign: sap.ui.core.TextAlign.Center,
+                })),
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    // id: 'Cell-0-2',
+                    // backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill2,
+                    colSpan: 1,
+                    height: '60px',
+                }).addContent(new sap.ui.commons.DropdownBox({
+                    id: 'tDropdownBox',
+                    editable: true,
+                    // text: "UPDATE",
+                    tooltip: 'DropdownBox',
+                    // id: "BT-UpdateCavities",
+                    //style: sap.ui.commons.ButtonStyle.Emph,
+                    width: "100%",
+                    // height: "60px",
+                    //press : function() {},
+                    items: [new sap.ui.core.ListItem({
+                        key: "key1",
+                        text: "unitName1"
+                    })],
+                })),
+            ]
+        });
+        oLayout.addRow(oRow);
+
+        // var oComboBox_CavityID = new sap.ui.commons.DropdownBox({
+        //     id: "dbox_CavityID",
+        //     tooltip: 'Cavity ID',
+        //     width: '50%',
+        // });
+
+
+        // oBT_UpdateCavities = new sap.ui.commons.Button({
+        //     text: "UPDATE",
+        //     id: "BT-UpdateCavities",
+        //     //style: sap.ui.commons.ButtonStyle.Emph,
+        //     width: "120px",
+        //     height: "70px",
+        //     //press : function() {},
+        // });
+        oRow = new sap.ui.commons.layout.MatrixLayoutRow({
+            // id : 'oRow0',
+            height: '80px',
+            cells: [
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    // id : 'Cell-0-0',
+                    // backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill1,
+                    height: '60px',
+                    colSpan: 2
+                }).addContent(new sap.ui.commons.Label({
+                    id: 'tWeightOfBox',
+                    text: 'Weight Of Box',
+                    width: "90%",
+                    // design: sap.ui.commons.TextViewDesign.H1,
+                    textAlign: sap.ui.core.TextAlign.Right,
+                })),
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    // id: 'Cell-0-2',
+                    // backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill2,
+                    colSpan: 2,
+                    height: '60px',
+                }).addContent(new sap.ui.commons.TextField({
+                    id: 'mWeightOfBox',
+                    tooltip: 'Weight Of Box',
+                    editable: false,
+                    value: '99.99',
+                    width: '100%',
+                    textAlign: sap.ui.core.TextAlign.Center,
+                })),
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    // id: 'Cell-0-2',
+                    // backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill2,
+                    colSpan: 2,
+                    height: '60px',
+                }).addContent(new sap.ui.commons.Button({
+                    id: 'tButton2',
+                    text: "UPDATE",
+                    // id: "BT-UpdateCavities",
+                    //style: sap.ui.commons.ButtonStyle.Emph,
+                    width: "100%",
+                    height: "60px",
+                    //press : function() {},
+                })),
+            ]
+        });
+        oLayout.addRow(oRow);
+
+        oRow = new sap.ui.commons.layout.MatrixLayoutRow({
+            // id : 'oRow0',
+            height: '80px',
+            cells: [
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    height: '60px',
+                    colSpan: 2
+                }).addContent(new sap.ui.commons.Label({
+                    id: 'tWeightOfSample',
+                    text: 'Weight Of Sample',
+                    width: "90%",
+                    // design: sap.ui.commons.TextViewDesign.H1,
+                    textAlign: sap.ui.core.TextAlign.Right,
+                })),
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    // id: 'Cell-0-2',
+                    // backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill2,
+                    colSpan: 2,
+                    height: '60px',
+                }).addContent(new sap.ui.commons.TextField({
+                    id: 'mWeightOfSample',
+                    tooltip: 'Weight Of Box',
+                    editable: false,
+                    value: '999.99',
+                    width: '100%',
+                    textAlign: sap.ui.core.TextAlign.Center,
+                })),
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    // id: 'Cell-0-2',
+                    // backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill2,
+                    colSpan: 2,
+                    height: '60px',
+                }).addContent(new sap.ui.commons.Button({
+                    id: 'tButton3',
+                    text: "UPDATE",
+                    // id: "BT-UpdateCavities",
+                    //style: sap.ui.commons.ButtonStyle.Emph,
+                    width: "100%",
+                    height: "60px",
+                    //press : function() {},
+                })),
+            ]
+        });
+        oLayout.addRow(oRow);
+
+
+        oRow = new sap.ui.commons.layout.MatrixLayoutRow({
+            // id : 'oRow0',
+            height: '80px',
+            cells: [
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    height: '60px',
+                    colSpan: 2
+                }).addContent(new sap.ui.commons.Label({
+                    id: 'tSampleSize',
+                    text: 'Sample Size',
+                    width: "90%",
+                    // design: sap.ui.commons.TextViewDesign.H1,
+                    textAlign: sap.ui.core.TextAlign.Right,
+                })),
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    // id: 'Cell-0-2',
+                    // backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill2,
+                    colSpan: 1,
+                    height: '60px',
+                }).addContent(new sap.ui.commons.TextField({
+                    id: 'mSampleSize1',
+                    tooltip: 'Sample Size',
+                    editable: true,
+                    value: '',
+                    width: '100%',
+                    textAlign: sap.ui.core.TextAlign.Center,
+                })),
+                new sap.ui.commons.layout.MatrixLayoutCell({
+                    // id: 'Cell-0-2',
+                    // backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill2,
+                    colSpan: 3,
+                    height: '60px',
+                }).addContent(new sap.ui.commons.TextField({
+                    id: 'mSampleSize2',
+                    tooltip: 'Weight Of Each',
+                    editable: false,
+                    value: '999.99 / Each',
+                    width: '100%',
+                    textAlign: sap.ui.core.TextAlign.Center,
+                })),
+            ]
+        });
+        oLayout.addRow(oRow);
+
+
+        // var oCell = new sap.ui.commons.layout.MatrixLayoutCell({
+        //     // id : 'Cell-0-0',
+        //     backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill1,
+        //     height: '60px',
+        //     colSpan: 2
+        // });
+
+        // var oTV = new sap.ui.commons.TextView({
+        //     text: 'Cell 0.0 - Colspan 2',
+        //     design: sap.ui.commons.TextViewDesign.H1
+        // });
+
+        // oCell.addContent(oTV);
+        // oRow.addCell(oCell);
+
+        // oCell = new sap.ui.commons.layout.MatrixLayoutCell({
+        //     // id: 'Cell-0-2',
+        //     backgroundDesign: sap.ui.commons.layout.BackgroundDesign.Fill2,
+        //     colSpan: 3
+        // });
+        //
+        // oTV1 = new sap.ui.commons.Label({
+        //     id: 'oTV1',
+        //     text: 'Cell 22',
+        //     width: "100%",
+        //     // design: sap.ui.commons.TextViewDesign.H1,
+        //     textAlign: sap.ui.core.TextAlign.Center,
+        // });
+
+        // oCell.addContent(oTV1);
+        // oRow.addCell(oCell);
+
+
         var oMatrixCVT = new sap.ui.commons.layout.MatrixLayout({
             id: 'MatrixCVT',
             layoutFixed: true,
@@ -2120,9 +2452,10 @@
         oMatrixCV.createRow(oBT_UpdateCavities);
 
         var oOverlayContainerCV = new sap.ui.ux3.OverlayDialog({openButtonVisible: false});
-        oOverlayContainerCV.setHeight('720px');
-        oOverlayContainerCV.setWidth('750px');
-        oOverlayContainerCV.addContent(oMatrixCV);
+        oOverlayContainerCV.setHeight('600px');
+        oOverlayContainerCV.setWidth('700px');
+        // oOverlayContainerCV.addContent(oMatrixCV);
+        oOverlayContainerCV.addContent(oLayout);
 
         //**************************************************************************************
 
